# DCA

./: .gitignore
practicas/prac2/: .gitignore
practicas/prac2/lbt-joancervetoserrano/: README.md  run.py
practicas/prac2/lbt-joancervetoserrano/dcalbt/: __init__.py  bug.py  cli.py  communication.py  entry.py  keyword_exception.py  session.py  storage.py  view.py
practicas/prac3/: kilo.deb
practicas/prac3/debian/DEBIAN/: control
practicas/prac3/testing/: aaa_install_congrats.sh  aaa_remove_congrats.sh  aaa_validate_pre_install.sh  aaa_validate_pre_remove.sh  helloworlddca-dbgsym_1.0-1_arm64.deb  helloworlddca_1.0-1.debian.tar.xz  helloworlddca_1.0-1.dsc  helloworlddca_1.0-1_arm64.buildinfo  helloworlddca_1.0-1_arm64.changes  helloworlddca_1.0-1_arm64.deb  zv
practicas/prac3/testing/helloworlddca-1.0/: Makefile  hw  hw.c
practicas/prac4/: joancervetoserrano_make.txt
practicas/prac4/data/: tiempos.txt
practicas/prac5/: lista-de-ejecuciones.txt
practicas/prac5/autotools/: Makefile.am  config.status  configure
practicas/prac5/autotools/autom4te.cache/: output.0  output.1  traces.0  traces.1
practicas/prac5/cmake/recursive/: CMakeLists.txt
practicas/prac5/raw_project/: Makefile
practicas/prac6/: CMakeLists.txt  Makefile  aclaraciones.txt
practicas/prac6/src/: CMakeLists.txt  calculadora.cpp  calculadora.h
practicas/prac6/tests/: CMakeLists.txt  tests_calculadora_boost.cpp  tests_calculadora_catch.cpp
practicas/prac8/: aclaraciones.txt
practicas/prac8/app/: app.py
practicas/prac9/: readme.txt  saludar.py
(+46 files in other folders)
